--- a/package.json
+++ b/package.json
@@ -1,33 +1,56 @@
 {
-  "name": "myapi-with-auth",
+  "name": "codeborn",
   "version": "0.0.1",
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.2",
-    "@types/express-session": "^1.15.16",
+    "@types/jest": "^26.0.23",
     "@types/node": "^12.12.8",
-    "nodemon": "^1.19.4",
-    "ts-node": "8.5.2",
-    "typescript": "3.7.2"
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.5",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.0.0"
+  },
+  "license": "MIT",
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testMatch": [
+      "**/*.(test|spec).(ts|tsx)"
+    ],
+    "globals": {
+      "ts-jest": {
+        "babelConfig": true,
+        "tsconfig": "jest.tsconfig.json"
+      }
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text",
+      "text-summary"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/mocks.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/mocks.js"
+    }
   },
   "dependencies": {
-    "apollo-server-express": "^2.9.9",
-    "bcryptjs": "^2.4.3",
-    "class-validator": "^0.13.1",
-    "connect-sqlite3": "^0.9.11",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "graphql": "^14.5.8",
-    "pg": "^7.13.0",
-    "prisma": "^2.21.2",
-    "reflect-metadata": "^0.1.10",
-    "sqlite3": "^4.1.0",
-    "ts-prime": "^0.3.15",
-    "type-graphql": "^0.17.5",
-    "typeorm": "0.2.20"
+    "@types/glob": "^7.1.3",
+    "clibucli": "^0.0.2",
+    "glob": "^7.1.6",
+    "ix": "^2.5.5"
   },
   "scripts": {
-    "start": "nodemon --exec ts-node --files src/index.ts",
-    "build": "tsc"
+    "search": "ts-node src/index.ts",
+    "build": "tsc",
+    "test": "jest"
   }
 }
